--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -10,17 +10,91 @@
 <style>
     body {
         background-color: rgb(20, 17, 28);
+        color: rgb(105 168 222);
+        padding: 0px;
+        margin: 0px;
+        box-sizing: border-box;
     }
 
-    h1 {
+    @font-face {
+        font-family: "justsans";
+        src: url("Fonts/justsans.otf");
+    }
+
+    #navbar {
+        background-color: rgb(30, 24, 44);
+        padding: 5px;
+    }
+
+    #main_contents {
+        height: 40%;
+        text-align: center;
+        justify-content: flex-end;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+
+    #logoimage {
+        pointer-events: none;
+        width: 25%;
+    }
+
+    .text {
+        color: aliceblue;
+        font-family: "justsans";
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    #button_holder {
+        display: flex;
+        gap: 40px;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        margin-top: 100px;
+    }
+
+    .main_buttons {
         color: white;
-        font-family: monospace;
+        border: 3px solid rgb(105 168 222);
+        background-color: transparent;
+        font-family: "justsans";
+        padding: 10px 20px 10px 20px;
+        font-size: 16px;
+        border-radius: 5px;
+        transition: all 0.2s;
+        font-weight: bold;
+    }
+
+    .main_buttons:hover {
+        border-color: rgb(40, 88, 130);
     }
 </style>
 
 <body>
 
-    <h1 align="center">This is the Home Page.</h1>
+    <!-- <div id="navbar">
+        <img src="/logo.svg" alt="Logo" id="logoimage" style="width:120px;">
+
+    </div> -->
+
+    <div id="main_contents">
+        <img src="/logo.svg" alt="Logo" id="logoimage" class="main_container_contents">
+        <span class="text" class="main_container_contents">Free - Simple - Amazing &#128293</span>
+    </div>
+
+    <div id="button_holder">
+        <button class="main_buttons">Try It !</button>
+        <button class="main_buttons">Read Docs</button>
+    </div>
+
+    <footer>
+    </footer>
 
 </body>
 
