Added Updated SVG

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -17,8 +17,8 @@
     }
 
     @font-face {
-        font-family: "justsans";
-        src: url("Fonts/justsans.otf");
+        font-family: "intro";
+        src: url("Fonts/intro.otf");
     }
 
     #navbar {
@@ -44,7 +44,8 @@
 
     .text {
         color: aliceblue;
-        font-family: "justsans";
+        font-family: "intro";
+        font-family: "intro";
         font-weight: bold;
         font-size: 20px;
     }
@@ -61,14 +62,13 @@
 
     .main_buttons {
         color: white;
-        border: 3px solid rgb(105 168 222);
+        border: 3px solid red;
         background-color: transparent;
-        font-family: "justsans";
+        font-family: "intro";
         padding: 10px 20px 10px 20px;
         font-size: 16px;
         border-radius: 5px;
         transition: all 0.2s;
-        font-weight: bold;
     }
 
     .main_buttons:hover {
@@ -84,7 +84,7 @@
     </div> -->
 
     <div id="main_contents">
-        <img src="/logo.svg" alt="Logo" id="logoimage" class="main_container_contents">
+        <img src="/newlogo.svg" alt="Logo" id="logoimage" class="main_container_contents">
         <span class="text" class="main_container_contents">Free - Simple - Amazing &#128293</span>
     </div>
 
