--- a/api/templates/get.html
+++ b/api/templates/get.html
@@ -55,6 +55,8 @@
 
     .method_info {
         font-weight: bold;
+        color: white;
+        font-size: 16px;
     }
 
     .flex_container {
@@ -88,6 +90,10 @@
         background-color: green;
         border-color: rgb(0, 255, 51);
     }
+
+    .method_text {
+        color: white;
+    }
 </style>
 
 <body>
@@ -97,7 +103,7 @@
     <div class="method_container">
 
         <div class="code_heading_container">
-            <h3 class="code_heading"><span id="colored_get">/get </span> method</h3>
+            <h3 class="code_heading"><span id="colored_get">/get </span> <span class="method_text">method</span></h3>
         </div>
 
         <div class="method_info_container">
@@ -112,7 +118,8 @@
     <div class="method_container">
 
         <div class="code_heading_container">
-            <h3 class="code_heading"><span id="colored_get_random">/get/random </span> method</h3>
+            <h3 class="code_heading"><span id="colored_get_random">/get/random </span> <span
+                    class="method_text">method</span></h3>
         </div>
 
         <div class="method_info_container">
@@ -140,7 +147,8 @@
     <div class="method_container">
 
         <div class="code_heading_container">
-            <h3 class="code_heading"><code id="colored_get_id">/get/id/&ltint:id&gt </code> method</h3>
+            <h3 class="code_heading"><code id="colored_get_id">/get/id/&ltint:id&gt </code> <span
+                    class="method_text">method</span></h3>
         </div>
 
         <div class="method_info_container">
