--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <style>
@@ -34,10 +34,10 @@
     }
 
     #navbar {
-        /* background-color: rgb(30, 24, 44); */
         padding: 10px 100px 10px 100px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 
     #logo_container {
@@ -72,6 +72,7 @@
         margin: 10px;
         padding: 8px;
         border-radius: 5px;
+        transition: all 0.2s ease-in-out;
 
     }
 
@@ -82,24 +83,51 @@
     .hyperlinks {
         color: white;
         text-decoration: none;
-        font-family: intro;
-        font-size: 14px;
+        font-family: Geomatrix;
+        font-weight: bold;
+        font-size: 16px;
         display: inline;
         margin: 0px;
     }
 
-    #joketext_container {
+    #joke_container {
         margin: 100px;
-        display: inline-block;
+        height: 40vh;
+        display: flex;
         /* margin: auto; */
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    #joke_data_container {
+        margin: auto auto;
+        display: inline-block;
     }
 
     #joketext {
-        color: white;
+        color: rgb(238, 220, 24);
         font-family: Geomatrix;
         font-size: 26px;
-
         text-align: center;
+    }
+
+    #random_joke_button {
+        margin: 20px 0px;
+        background-color: transparent;
+        padding: 10px 10px;
+        color: white;
+        font-family: Geomatrix;
+        font-weight: bold;
+        font-size: 18px;
+        border: 2px solid white;
+        border-radius: 5px;
+        transition: all 0.1s ease-in-out;
+
+    }
+
+    #random_joke_button:hover {
+        border-color: grey;
     }
 </style>
 
@@ -109,25 +137,33 @@
     <div id="navbar">
 
         <div id="logo_container">
-            <img src="/newlogo.svg" alt="Logo" id="logoimage" class="main_container_contents">
+            <img src="images/newlogo.svg" alt="Logo" id="logoimage" class="main_container_contents">
         </div>
 
         <div id="links_container">
             <ul>
                 <li><a href="http://127.0.0.1:5000/get" class="hyperlinks">API Usage</a></li>
-                <li><a href="" class="hyperlinks">Github</a></li>
+                <li><a href="https://www.github.com/TheFallen-Cat" class="hyperlinks">Github</a></li>
+                <li><a href="{{ url_for('static', filename='about.html') }}" class="hyperlinks">About</a></li>
+                <li><a href="{{ url_for('static', filename='support.html') }}" class="hyperlinks">Support</a></li>
             </ul>
         </div>
     </div>
 
-    <div id="joketext_container">
-        <p id="joketext">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum dolorum ullam deleniti
-            voluptates.
-            Modi reiciendis eos laborum magnam dolor recusandae excepturi cumque aliquam doloremque, perspiciatis,
-            praesentium veritatis dolorem mollitia. Sint!
-        </p>
+    <div id="joke_container">
+        <div id="joke_data_container">
+            <p id="joketext">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum dolorum ullam deleniti
+                voluptates.
+                Modi reiciendis eos laborum magnam dolor recusandae excepturi cumque aliquam doloremque, perspiciatis,
+                praesentium veritatis dolorem mollitia. Sint!
+            </p>
 
-        <button id="random_joke_button">Random</button>
+            <div id="button_container">
+                <button id="random_joke_button"> <i class="fa fa-rotate-right" style="font-size:18px;color: white;"></i>
+                    Random
+                </button>
+            </div>
+        </div>
     </div>
 
 
