--- a/api/templates/about.html
+++ b/api/templates/about.html
@@ -7,6 +7,12 @@
     <title>About</title>
 </head>
 
+<style>
+    body {
+        background-color: rgb(20, 17, 28)
+    }
+</style>
+
 <body>
 
 </body>
