--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -92,7 +92,7 @@
     }
 
     #joke_container {
-        margin: 100px;
+        margin: 5%;
         height: 40vh;
         display: flex;
         /* margin: auto; */
@@ -111,6 +111,7 @@
         font-family: Geomatrix;
         font-size: 26px;
         text-align: center;
+        height: 100px;
     }
 
     #random_joke_button {
@@ -143,11 +144,10 @@
 
         <div id="links_container">
             <ul>
-                <li><a href="get.html" class="hyperlinks">API Usage</a></li>
+                <li><a href="http://127.0.0.1:5000/get" class="hyperlinks">API Usage</a></li>
                 <li><a href="https://www.github.com/TheFallen-Cat" class="hyperlinks">Github</a></li>
-                <li><a href="about.html" class="hyperlinks">About</a></li>
-                <!-- <li><a href="{{ url_for('static', filename='support.html') }}" class="hyperlinks">Support</a></li> -->
-                <li><a href="support.html" class="hyperlinks">Support</a></li>
+                <li><a href="http://127.0.0.1:5000/about" class="hyperlinks">About</a></li>
+                <li><a href="https://ko-fi.com/abhayshukla" class="hyperlinks">Support</a></li>
             </ul>
         </div>
     </div>
