--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -144,9 +144,9 @@
 
         <div id="links_container">
             <ul>
-                <li><a href="http://127.0.0.1:5000/get" class="hyperlinks">API Usage</a></li>
+                <li><a href="https://jokeapi.ddns.net/get" class="hyperlinks">API Usage</a></li>
                 <li><a href="https://www.github.com/TheFallen-Cat" class="hyperlinks">Github</a></li>
-                <li><a href="http://127.0.0.1:5000/about" class="hyperlinks">About</a></li>
+                <li><a href="https://jokeapi.ddns.net/about" class="hyperlinks">About</a></li>
                 <li><a href="https://ko-fi.com/abhayshukla" class="hyperlinks">Support</a></li>
             </ul>
         </div>
