--- a/api/templates/get.html
+++ b/api/templates/get.html
@@ -193,7 +193,7 @@
     function GetRandomJoke() {
         // var hljs = window.hljs;
 
-        fetch('http://127.0.0.1:5000/get/random')
+        fetch('https://jokeapi.ddns.net/get/random')
             .then(response => response.json())
             .then(data => {
                 var randomCodeBlock = document.getElementById('get_random_code_block');
@@ -212,7 +212,7 @@
         if (id == null || id == "") {
             idCodeBlock.innerHTML = `{\n\terror: No id found\n}`
         }
-        fetch(`http://127.0.0.1:5000/get/id/${id}`)
+        fetch(`https://jokeapi.ddns.net/get/id/${id}`)
             .then(response => response.json())
             .then(data => {
                 idCodeBlock.innerHTML = `{\n\tid: ${data['id']}\n\tjoke: ${data['main_joke']}\n}`;
