--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -111,7 +111,7 @@
         font-family: Geomatrix;
         font-size: 26px;
         text-align: center;
-        /* height: 100px; */
+        min-height: 100px;
     }
 
     #random_joke_button {
@@ -144,7 +144,7 @@
 
         <div id="links_container">
             <ul>
-                <li><a href="/get" class="hyperlinks">API Usage</a></li>
+                <li><a href="/api" class="hyperlinks">API Usage</a></li>
                 <li><a href="https://www.github.com/TheFallen-Cat" class="hyperlinks">Github</a></li>
                 <li><a href="/about" class="hyperlinks">About</a></li>
                 <li><a href="https://ko-fi.com/abhayshukla" class="hyperlinks">Support</a></li>
