--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,131 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="home_script.js" defer></script>
+    <script src="scripts/home.js" defer></script>
+
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/style/home_style.css') }}"> -->
+    <link rel="stylesheet" type="text/css" href="styles/home.css">
     <title>Home</title>
 </head>
-
-<style>
-    body {
-        background-color: rgb(20, 17, 28);
-        padding: 50px;
-        margin: 0px;
-        box-sizing: border-box;
-    }
-
-    :root {
-        --main-text-color: #E4DCCF;
-
-    }
-
-    @font-face {
-        font-family: "intro";
-        src: url("Fonts/intro.otf");
-    }
-
-    @font-face {
-        font-family: "Geomatrix";
-        src: url("Fonts/Geomatrix.otf");
-    }
-
-    #navbar {
-        padding: 10px 100px 10px 100px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    #logo_container {
-        display: inline;
-        order: 1;
-    }
-
-    #logoimage {
-        pointer-events: none;
-        width: 50%;
-        display: inline;
-    }
-
-    #links_container {
-        display: inline;
-        display: flex;
-        margin: auto 0px;
-        flex-direction: row-reverse;
-        order: 1;
-
-    }
-
-    ul {
-        list-style-type: none;
-        padding: 0px;
-        margin: 0px;
-        display: inline;
-    }
-
-    ul li {
-        display: inline;
-        margin: 10px;
-        padding: 8px;
-        border-radius: 5px;
-        transition: all 0.2s ease-in-out;
-
-    }
-
-    ul li:hover {
-        background-color: rgb(58, 48, 82);
-    }
-
-    .hyperlinks {
-        color: white;
-        text-decoration: none;
-        font-family: Geomatrix;
-        font-weight: bold;
-        font-size: 16px;
-        display: inline;
-        margin: 0px;
-    }
-
-    #joke_container {
-        margin: 5%;
-        height: 40vh;
-        display: flex;
-        /* margin: auto; */
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
-
-    #joke_data_container {
-        margin: auto auto;
-        display: inline-block;
-    }
-
-    #joketext {
-        color: rgb(238, 220, 24);
-        font-family: Geomatrix;
-        font-size: 26px;
-        text-align: center;
-        min-height: 100px;
-    }
-
-    #random_joke_button {
-        margin: 20px 0px;
-        background-color: transparent;
-        padding: 10px 10px;
-        color: white;
-        font-family: Geomatrix;
-        font-weight: bold;
-        font-size: 18px;
-        border: 2px solid white;
-        border-radius: 5px;
-        transition: all 0.1s ease-in-out;
-
-    }
-
-    #random_joke_button:hover {
-        border-color: grey;
-    }
-</style>
 
 <body>
 
