Set up flask-cors

--- a/app/templates/api.html
+++ b/app/templates/api.html
@@ -87,7 +87,7 @@
 
         <div class="method-info-container">
             <p class="method-info">
-                Returns a random joke from the dataset with the specified id in JSON Format.
+                Returns a joke from the dataset with the specified id in JSON Format.
                 &ltint:id&gt is the paramter to pass while requesting the webpage. It accepts an Integer.
             </p>
         </div>
