--- a/app/static/styles/api.css
+++ b/app/static/styles/api.css
@@ -81,6 +81,7 @@ input[type=number]::-webkit-outer-spin-button {
     padding: 5px 10px;
     color: rgb(18, 18, 18);
     background-color: rgb(233, 233, 233);
+    border-color: rgb(18, 18, 18);
     border-radius: 5px;
     font-weight: bolder;
     font-size: 16px;
@@ -119,7 +120,7 @@ input[type=number]::-webkit-outer-spin-button {
     list-style: none;
     font-family: monospace;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 16px;
     transition: all 0.3s;
 }
 
