--- a/app/templates/page404.html
+++ b/app/templates/page404.html
@@ -1,18 +1,27 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 Not Found</title>
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/pagenotfound.css') }}">
-    <script src="https://kit.fontawesome.com/f33dbf32ac.js" crossorigin="anonymous"></script>
-
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles/pagenotfound.css') }}"
+    />
+    <script
+      src="https://kit.fontawesome.com/f33dbf32ac.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="{{ url_for('static', filename='/images/favicon.ico') }}"
+    />
+  </head>
+  <body>
     <div id="error-message-container">
-        <i class="fa-regular fa-circle-xmark"></i>        
-        <h1 id="error-heading">404 Page not found</h1>
-
+      <i class="fa-regular fa-circle-xmark"></i>
+      <h1 id="error-heading">404 Page not found</h1>
     </div>
-</body>
+  </body>
 </html>
